    return value of zgrep. It usually errors out with 'stdout: broken pipe'
    when called with -m1.
  * bin/crash-digger: Mark a bug as retraced if DistroRelease: cannot be
    determined. Those are bugs apport cannot handle.
  * backends/packaging-apt-dpkg.py, get_source_tree(): Call apt-get source
    with --assume-yes to not block on VCS confirmations.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Jul 2007 17:27:26 +0200

apport (0.87) gutsy; urgency=low

  * apport/report.py:
    - test_gen_stacktrace_top(): Add test case for unwinding a Gnome assertion
      (g_logv(), g_assert_warning() and similar), see LP #123462.
    - _gen_stacktrace_top(): Generalize for unwinding multiple functions and a
      set of function names, and add the Gnome assertion ones.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 02 Jul 2007 11:00:44 +0200

apport (0.86) gutsy; urgency=low

  * test-apport: Check that apport does not create reports for emtpy core
    dumps.
  * problem_report.py: Introduce a fourth optional parameter "fail_on_empty"
    to file pointer tuples which causes write() to raise an IOError if no data
    was read. Add test cases.
  * bin/apport: Enforce non-emptyness of CoreDump.
  * problem_report.py: Add test case for delayed piping of data passed as file
    object pointers. This was supposed to explain the reason for getting bugs
    with zero-byte core dumps, but already works correctly.
  * apport/report.py, check_ignored(): round the mtime to an int (just like
    mark_ignore() does), to not get wrong results on file systems that support
    subsecond file timestamps. This fixes running the test suite on the live
    CD.
  * test-apport: Clarify assertion message if /var/crash is not empty.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 28 Jun 2007 19:14:36 +0200

apport (0.85) gutsy; urgency=low

  * apport/crashdb_impl/launchpad.py: BugList.bugs is already a set, simplify
    code a bit.